--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     });
 
     robuxButton.addEventListener('click', () => {
-      window.location.href = 'https://files.catbox.moe/2sqj2j.mp4';
+      window.location.href = 'https://files.catbox.moe/rd5lzy.mov';
     });
 
     document.addEventListener('mousemove', (e) => {
